--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@progress/kendo-theme-default": "^2.38.2",
     "adal-angular4": "^0.1.4",
     "core-js": "^2.4.1",
+    "enhanced-resolve": "^3.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
